--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ playground.xcworkspace
 
 .build/
 
+# Swift build artifacts
+*.d
+*.o
+*.swiftdeps
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
